--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,21 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        include:
+          - os: ubuntu-latest
+            num-parse-method: boost
+          - os: ubuntu-latest
+            num-parse-method: FastFloat
+          - os: ubuntu-latest
+            num-parse-method: FromChars
+          - os: ubuntu-latest
+            num-parse-method: strtod
+          - os: macos-latest
+            num-parse-method: FastFloat
+          - os: windows-latest
+            num-parse-method: FromChars
+          - os: windows-latest
+            num-parse-method: strtod
 
     steps:
     - name: Checkout code
@@ -27,7 +42,7 @@ jobs:
 
     - name: Set up dependencies
       if: runner.os == 'Linux'
-      run: sudo apt-get update && sudo apt-get install -y build-essential
+      run: sudo apt-get update && sudo apt-get install -y build-essential libboost-all-dev
 
     #- name: Set up dependencies
     #  if: runner.os == 'macOS'
@@ -40,8 +55,17 @@ jobs:
     - name: Create build directory
       run: mkdir build
 
-    - name: Configure CMake
-      run: cmake -S $GITHUB_WORKSPACE -B build -DSpecUtils_BUILD_UNIT_TESTS=ON -DSpecUtils_BUILD_REGRESSION_TEST=ON -DSpecUtils_ENABLE_EQUALITY_CHECKS=ON -DPERFORM_DEVELOPER_CHECKS=OFF -DSpecUtils_ENABLE_D3_CHART=ON -DSpecUtils_D3_SUPPORT_FILE_STATIC=ON -DSpecUtils_ENABLE_URI_SPECTRA=OFF 
+    - name: Configure CMake on Windows
+      if: runner.os == 'Windows'
+      run: cmake -S $GITHUB_WORKSPACE -B build -DSpecUtils_BUILD_UNIT_TESTS=ON -DSpecUtils_BUILD_REGRESSION_TEST=ON -DSpecUtils_ENABLE_EQUALITY_CHECKS=ON -DPERFORM_DEVELOPER_CHECKS=OFF -DSpecUtils_ENABLE_D3_CHART=ON -DSpecUtils_D3_SUPPORT_FILE_STATIC=ON -DSpecUtils_ENABLE_URI_SPECTRA=OFF -DCMAKE_BUILD_TYPE=Release -DSpecUtils_FLT_PARSE_METHOD=${{ matrix.num-parse-method }} -DSpecUtils_FETCH_FAST_FLOAT=ON
+
+    - name: Configure CMake on Linux
+      if: runner.os == 'Linux'
+      run: cmake -S $GITHUB_WORKSPACE -B build -DSpecUtils_BUILD_UNIT_TESTS=ON -DSpecUtils_BUILD_REGRESSION_TEST=ON -DSpecUtils_ENABLE_EQUALITY_CHECKS=ON -DPERFORM_DEVELOPER_CHECKS=OFF -DSpecUtils_ENABLE_D3_CHART=ON -DSpecUtils_D3_SUPPORT_FILE_STATIC=ON -DSpecUtils_ENABLE_URI_SPECTRA=OFF -DCMAKE_BUILD_TYPE=Release -DSpecUtils_FLT_PARSE_METHOD=${{ matrix.num-parse-method }} -DSpecUtils_FETCH_FAST_FLOAT=ON
+      
+    - name: Configure CMake on macOS
+      if: runner.os == 'macOS'
+      run: cmake -S $GITHUB_WORKSPACE -B build -DSpecUtils_BUILD_UNIT_TESTS=ON -DSpecUtils_BUILD_REGRESSION_TEST=ON -DSpecUtils_ENABLE_EQUALITY_CHECKS=ON -DPERFORM_DEVELOPER_CHECKS=OFF -DSpecUtils_ENABLE_D3_CHART=ON -DSpecUtils_D3_SUPPORT_FILE_STATIC=ON -DSpecUtils_ENABLE_URI_SPECTRA=ON -DCMAKE_BUILD_TYPE=Release -DSpecUtils_FLT_PARSE_METHOD=${{ matrix.num-parse-method }} -DSpecUtils_FETCH_FAST_FLOAT=ON
 
     - name: Build
       run: cmake --build build --config Release
