--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -287,7 +287,7 @@ endif( SpecUtils_PYTHON_BINDINGS )
 
 
 if( DEFINED boost_SOURCE_DIR )
-  target_link_libraries( SpecUtils PUBLIC Boost::system Boost::spirit Boost::fusion Boost::algorithm Boost::functional )
+  target_link_libraries( SpecUtils PUBLIC Boost::system Boost::spirit Boost::fusion Boost::algorithm Boost::functional Boost::crc )
 endif( DEFINED boost_SOURCE_DIR )
 
 
