--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,8 +61,6 @@ if( NOT DEFAULT_NUMBER_PARSE_METHOD )
     elseif( (CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
           AND (CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 19.0) )
       set( DEFAULT_NUMBER_PARSE_METHOD "FromChars" )
-    else()
-      message( "WTF")
     endif()
   endif( FAST_FLOAT_FILE_PATH )
 endif( NOT DEFAULT_NUMBER_PARSE_METHOD )
@@ -330,12 +328,13 @@ endif( SpecUtils_USE_FAST_FLOAT )
 if( SpecUtils_USE_BOOST_SPIRIT OR PERFORM_DEVELOPER_CHECKS OR SpecUtils_PYTHON_BINDINGS )
   if( DEFINED boost_SOURCE_DIR )
     # We used CMake Fetch to get boost (e.g., in InterSpec)
-    target_link_libraries( SpecUtils PUBLIC Boost::system Boost::spirit Boost::fusion Boost::algorithm Boost::functional )
+    target_link_libraries( SpecUtils PUBLIC Boost::system Boost::spirit Boost::fusion Boost::algorithm Boost::functional Boost::crc )
   else( DEFINED boost_SOURCE_DIR )
-    find_package( Boost REQUIRED COMPONENTS ${boost_libs_required} )
+    find_package( Boost REQUIRED COMPONENTS system ${boost_libs_required} )
     if( NOT Boost_FOUND )
       message(FATAL_ERROR "Couldnt Find Boost")
     endif( NOT Boost_FOUND )
+    target_link_libraries( SpecUtils PUBLIC Boost::system )
   endif( DEFINED boost_SOURCE_DIR )
 endif( SpecUtils_USE_BOOST_SPIRIT OR PERFORM_DEVELOPER_CHECKS OR SpecUtils_PYTHON_BINDINGS )
 
