Add a number of missing functions to C-api, and add example of using it.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -11,10 +11,16 @@ target_link_libraries( convert_to_n42 PUBLIC SpecUtils )
 
 add_executable( convert_to_cnf convert_to_cnf.cpp )
 target_link_libraries( convert_to_cnf PUBLIC SpecUtils )
-
-
 set_target_properties( convert_to_n42 convert_to_cnf PROPERTIES
   CXX_STANDARD 11
   CXX_STANDARD_REQUIRED YES
   CXX_EXTENSIONS NO
 )
+
+
+if( SpecUtils_C_BINDINGS )
+  add_executable( c_interface_example c_interface_example.c )
+  set_source_files_properties( c_interface_example.c PROPERTIES LANGUAGE C )
+  set_target_properties( c_interface_example PROPERTIES C_STANDARD 99 C_STANDARD_REQUIRED YES )
+  target_link_libraries( c_interface_example PUBLIC SpecUtils )
+endif( SpecUtils_C_BINDINGS )
