updates to instructions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,11 +114,12 @@ endif( SpecUtils_JAVA_SWIG )
 set( THIRD_PARTY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/3rdparty" )
 
 if( SpecUtils_PYTHON_BINDINGS )
-  FIND_PACKAGE(PythonLibs)
-  IF(NOT PYTHONLIBS_FOUND)
+  FIND_PACKAGE(Python3 COMPONENTS Development )
+  IF(NOT Python3_FOUND)
     MESSAGE(FATAL_ERROR "Unable to find PythonLibs.")
   ENDIF()
-endif( SpecUtils_PYTHON_BINDINGS )
+  message( "Python include dirs: ${Python3_INCLUDE_DIRS}")
+endif()
 
 set( sources
      src/SpecFile.cpp
@@ -399,7 +400,7 @@ endif( SpecUtils_ENABLE_URI_SPECTRA )
 
 
 if( SpecUtils_PYTHON_BINDINGS )
-  target_link_libraries( SpecUtils PUBLIC Boost::python ${Boost_PYTHON_LIBRARY} ${PYTHON_LIBRARIES} )
+  target_link_libraries( SpecUtils PUBLIC Boost::python ${Boost_PYTHON_LIBRARY} ${Python3_LIBRARIES} )
 endif( SpecUtils_PYTHON_BINDINGS )
 
 
@@ -418,7 +419,7 @@ elseif( WIN32 )
 endif( MINGW )
 
 target_include_directories( SpecUtils PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}
-                            PRIVATE ${THIRD_PARTY_DIR} ${PYTHON_INCLUDE_DIRS} )
+                            PRIVATE ${THIRD_PARTY_DIR} ${Python3_INCLUDE_DIRS} )
 
 if( SpecUtils_BUILD_REGRESSION_TEST )
   if( NOT SpecUtils_ENABLE_EQUALITY_CHECKS )
