--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,6 +169,7 @@ set( headers
      SpecUtils/Filesystem.h
      SpecUtils/DateTime.h
      SpecUtils/ParseUtils.h
+     SpecUtils/PcfExtensions.h
      SpecUtils/SpecFile_location.h
      SpecUtils/RapidXmlUtils.hpp
 )
