--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,4 +70,4 @@ jobs:
       run: cmake --build build --config Debug
 
     - name: Run tests
-      run: ctest --test-dir build -C Release
+      run: ctest --rerun-failed --output-on-failure --test-dir build -C Release
