--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,7 @@ jobs:
       run: ctest --rerun-failed --output-on-failure --test-dir build -C Release
 
     - name: Package Lib
-      if: num-parse-method == 'FromChars' && runner.os == 'Windows'
+      if: ${{ num-parse-method }} == 'FromChars' && runner.os == 'Windows'
       run: |
         cmake -S ${{ github.workspace }} -B build_static_lib_shared_runtime -DSpecUtils_BUILD_UNIT_TESTS=OFF -DSpecUtils_BUILD_REGRESSION_TEST=OFF -DSpecUtils_ENABLE_EQUALITY_CHECKS=OFF -DPERFORM_DEVELOPER_CHECKS=OFF -DSpecUtils_ENABLE_D3_CHART=ON -DSpecUtils_D3_SUPPORT_FILE_STATIC=ON -DSpecUtils_ENABLE_URI_SPECTRA=ON -DCMAKE_BUILD_TYPE=Release -DSpecUtils_FLT_PARSE_METHOD=${{ matrix.num-parse-method }} -DSpecUtils_FETCH_FAST_FLOAT=ON -DCMAKE_INSTALL_PREFIX=install_prefix_static_lib_shared_runtime -DSpecUtils_USE_MSVC_MultiThreadDLL=ON -DSpecUtils_SHARED_LIB=OFF
         cmake --build build_static_lib_shared_runtime --config Release --target package
@@ -90,21 +90,21 @@ jobs:
 # Update the bleeding-edge tag to be current commit
     - name: Run latest-tag
       uses: EndBug/latest-tag@v1.6.1
-      if: num-parse-method == 'FromChars' && runner.os == 'Windows'
+      if: ${{ num-parse-method }} == 'FromChars' && runner.os == 'Windows'
       with:
         ref: bleeding-edge
         description: Latest successful automated build
 
     - name: Upload windows build to GitHub Artifact
       uses: actions/upload-artifact@v4
-      if: num-parse-method == 'FromChars' && runner.os == 'Windows'
+      if: ${{ num-parse-method }} == 'FromChars' && runner.os == 'Windows'
       with: 
         name: SpecUtils_${{ runner.os }}_latest
         path: '.\build_*\*.zip'
     
     - name: Create Release
       uses: ncipollo/release-action@v1.13.0
-      if: num-parse-method == 'FromChars' && runner.os == 'Windows'
+      if: ${{ num-parse-method }} == 'FromChars' && runner.os == 'Windows'
       with:
         artifacts: '.\build_*\*.zip'
         draft: false
