--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -136,6 +136,7 @@ jobs:
         makeLatest: true
 # Delete all the zip files we created
     - name: "Cleanup and finish"
+      if: runner.os == 'Windows'
       run: |
         Get-ChildItem '.\build_*\*.zip' | foreach { Remove-Item -Path $_.FullName }
         echo "Job status is ${{ job.status }}."
